--- a/FileConverter/MainWindow.xaml
+++ b/FileConverter/MainWindow.xaml
@@ -5,24 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FileConverter"
         mc:Ignorable="d"
-        Title="File Converter" Height="600" Width="900"
+        Title="File Converter" Height="700" Width="900"
         WindowStartupLocation="CenterScreen">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <!-- Menu Row -->
             <RowDefinition Height="Auto"/>
+            <!-- Header -->
             <RowDefinition Height="Auto"/>
+            <!-- Input File -->
             <RowDefinition Height="Auto"/>
+            <!-- Output File -->
             <RowDefinition Height="Auto"/>
+            <!-- Conversion Options -->
+            <RowDefinition Height="Auto"/>
+            <!-- Additional Parameters -->
+            <RowDefinition Height="Auto"/>
+            <!-- Time Estimation -->
             <RowDefinition Height="*"/>
+            <!-- Conversion Log -->
             <RowDefinition Height="Auto"/>
+            <!-- Error Details -->
+            <RowDefinition Height="Auto"/>
+            <!-- Progress and Buttons -->
         </Grid.RowDefinitions>
 
+        <!-- Menu -->
+        <Menu Grid.Row="0" Name="mainMenu" HorizontalAlignment="Left" VerticalAlignment="Top" Height="20">
+            <MenuItem Header="File">
+                <MenuItem Header="Exit" Click="btnExit_Click"/>
+            </MenuItem>
+            <MenuItem Header="Settings" Click="btnSettings_Click"/>
+            <MenuItem Header="Help">
+                <MenuItem Header="About" Click="btnAbout_Click"/>
+            </MenuItem>
+        </Menu>
+
         <!-- Header -->
-        <TextBlock Grid.Row="0" Text="File Converter" FontSize="24" FontWeight="Bold" Margin="0,0,0,20"/>
+        <TextBlock Grid.Row="1" Text="File Converter" FontSize="24" FontWeight="Bold" Margin="0,10,0,20"/>
 
         <!-- Input File Selection -->
-        <GroupBox Grid.Row="1" Header="Input File" Padding="10" Margin="0,0,0,10">
+        <GroupBox Grid.Row="2" Header="Input File" Padding="10" Margin="0,0,0,10">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -34,7 +58,7 @@
         </GroupBox>
 
         <!-- Output File Selection -->
-        <GroupBox Grid.Row="2" Header="Output File" Padding="10" Margin="0,0,0,10">
+        <GroupBox Grid.Row="3" Header="Output File" Padding="10" Margin="0,0,0,10">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -46,7 +70,7 @@
         </GroupBox>
 
         <!-- Conversion Options -->
-        <GroupBox Grid.Row="3" Header="Conversion Options" Padding="10" Margin="0,0,0,10">
+        <GroupBox Grid.Row="4" Header="Conversion Options" Padding="10" Margin="0,0,0,10">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -64,28 +88,58 @@
         </GroupBox>
 
         <!-- Additional Parameters -->
-        <GroupBox Grid.Row="4" Header="Additional Parameters" Padding="10" Margin="0,0,0,10">
+        <GroupBox Grid.Row="5" Header="Additional Parameters" Padding="10" Margin="0,0,0,10">
             <StackPanel x:Name="pnlParameters">
                 <!-- This will be populated dynamically based on the selected conversion -->
             </StackPanel>
         </GroupBox>
 
+        <!-- Time Estimation -->
+        <TextBlock Grid.Row="6" x:Name="txtTimeEstimation" Text="Estimated time remaining: --:--" 
+                   Visibility="Collapsed" Margin="10,0,0,5" FontWeight="Bold"/>
+
         <!-- Conversion Log -->
-        <GroupBox Grid.Row="5" Header="Conversion Log" Padding="10" Margin="0,0,0,10">
+        <GroupBox Grid.Row="7" Header="Conversion Log" Padding="10" Margin="0,0,0,10">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <TextBox x:Name="txtLog" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Stretch"/>
             </ScrollViewer>
         </GroupBox>
 
+        <!-- Error Details Panel (collapsed by default) -->
+        <GroupBox x:Name="grpErrorDetails" Grid.Row="8" Header="Error Details" Padding="10" Margin="0,0,0,10" 
+                  Visibility="Collapsed" Background="#FFF0F0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Text="The conversion encountered the following error:" Margin="0,0,0,10"/>
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" MaxHeight="200">
+                    <TextBox x:Name="txtErrorDetails" IsReadOnly="True" TextWrapping="Wrap" 
+                             Background="#FFF0F0" BorderThickness="0"/>
+                </ScrollViewer>
+
+                <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                    <Button x:Name="btnCopyError" Content="Copy Details" Padding="10,5" Margin="0,0,10,0" Click="btnCopyError_Click"/>
+                    <Button x:Name="btnCloseError" Content="Close" Padding="10,5" Click="btnCloseError_Click"/>
+                </StackPanel>
+            </Grid>
+        </GroupBox>
+
         <!-- Progress and Convert Buttons -->
-        <Grid Grid.Row="6">
+        <Grid Grid.Row="9">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
             <ProgressBar x:Name="progressBar" Grid.Column="0" Height="20" Margin="0,0,10,0"/>
-            <Button x:Name="btnConvert" Grid.Column="1" Content="Convert" Padding="30,10" Click="btnConvert_Click"/>
+            <Button x:Name="btnCancel" Grid.Column="1" Content="Cancel" Padding="20,10" 
+                    Margin="0,0,10,0" IsEnabled="False" Click="btnCancel_Click"/>
+            <Button x:Name="btnConvert" Grid.Column="2" Content="Convert" Padding="30,10" Click="btnConvert_Click"/>
         </Grid>
     </Grid>
 </Window>
